fix: reader overflow issues

--- a/frontend/src/pages/read/reader.module.scss
+++ b/frontend/src/pages/read/reader.module.scss
@@ -49,8 +49,6 @@
   position: relative;
   flex: 1;
   z-index: 3;
-  overflow: hidden;
-  height: 100%;
 }
 
 .aside {
